DPO-2816 deprekoitumisia sun muita korjauksia (#71)
* DPO-2816 fix annotations, fix problems

* DPO-2816 more fixes